kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - "shubin-ivan-12.k8s.praktikum-services.tech"
  rules:
  - host: "shubin-ivan-12.k8s.praktikum-services.tech"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: 
              number: 80
